Fix footer overlaping and spacing both on desktop and mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins:wght@300;500;600&display=swap');
 
-html,
 body {
     padding: 0;
-    margin: 0;
+    margin: 0 1em;
     background-color: #4142EA;
-    overflow: hidden;
-    height: 100vh;
     color:  #ffffff;
 }
 
@@ -48,29 +45,40 @@ body {
     text-decoration: underline;
     text-decoration-style: dotted;
 }
+
 .footer p a:hover {
     color: #EDFF00;
 
 }
+
+.footer, .btn {
+    margin-top: 1.5em;
+}
+
 #img-gong:hover {
     cursor: url('/images/small-bat.png'), pointer;
 }
 
 #welcome-screen, #gong-screen {
-    height: calc(90% - 70px);
     text-align: center;
 }
 
 .content {
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+body, #container {
+    min-height: 100vh;
+}
+
+.content {
+    min-height: calc(90vh - 70px);
+}
+
 #container {
-    height: inherit;
     background-color: #4142EA;
 }
 
@@ -86,7 +94,6 @@ body {
     color: white;
     transition: .5s ease;
     outline: none;
-    margin-top: 40px;
 }
 
 .btn:hover {
